wisecow-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: wisecow-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow-app
                port:
                  number: 4499
